[project]
name = "opticlust"
description = "Single cell clustering and recommendations at a glance"
authors = [
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
    {name = "Julian Arts", email = "julian.armando.arts@gmail.com"},
]
maintainers = [
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
    {name = "Julian Arts", email = "julian.armando.arts@gmail.com"},
]

requires-python = ">=3.9"
dependencies = [
    "igraph>=0.10",
    "leidenalg >=0.10.2",
    "matplotlib>=3.6",
    "natsort",
    "networkx>=2.7",
    "numpy>=1.23",
    "scanpy>=1.10",
    "scikit-learn>=1.1",
    "tqdm",
]

dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "single-cell",
    "clustering",
    "clustree",
    "scanpy",
    "leiden",
    "louvain",
]

[project.urls]
Homepage = "https://github.com/siebrenf/opticlust"
Readme = "https://github.com/siebrenf/opticlust/README.md"

[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "opticlust/__init__.py"
